# RBE502-catapult-arm-project

./: .gitignore  Final_Project_Dynamic_Model.m  README.md  ur5_dynamics.m
.devcontainer/: Dockerfile  docker-compose.yml
catapult/: CMakeLists.txt  package.xml
catapult/config/: ur_controllers.yaml
catapult/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
catapult/src/: throw.cpp
catapult/test/: test_gazebo.py
catapult_description/: CMakeLists.txt  package.xml
catapult_description/config/: initial_positions.yaml
catapult_description/config/ur5/: visual_parameters.yaml
catapult_description/config/ur5e/: visual_parameters.yaml
catapult_description/launch/: view_ur.launch.py
catapult_description/urdf/: 2f_85.ros2_control.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_with_gripper.urdf  ur_with_gripper.urdf.xacro
catapult_inspect/: package.xml  setup.cfg  setup.py
catapult_inspect/catapult_inspect/: listener.py
catapult_moveit_config/: CMakeLists.txt  package.xml
catapult_moveit_config/config/: controllers.yaml  joint_limits.yaml
catapult_moveit_config/launch/: ur_moveit.launch.py
catapult_moveit_config/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
catapult_moveit_config_generated/: .setup_assistant  CMakeLists.txt  package.xml
catapult_moveit_config_generated/config/: moveit_controllers.yaml  ros2_controllers.yaml  ur5.srdf  ur5.urdf.xacro
catapult_moveit_config_generated/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
custom_trajectory_controller/: CMakeLists.txt  README.md  joint_trajectory_plugin.xml  package.xml
custom_trajectory_controller/include/custom_trajectory_controller/: custom_trajectory_controller.hpp  interpolation_methods.hpp  tolerances.hpp  trajectory.hpp  validate_jtc_parameters.hpp  visibility_control.h
custom_trajectory_controller/src/: custom_trajectory_controller.cpp  custom_trajectory_controller_parameters.yaml  trajectory.cpp
reports/final-report/: final-report.tex  refs.bib
reports/progress-report/: progress-report.tex
